# RL-ResearchLab

./: README.md  RL-ResearchLab_Technical_Design_Review.md  auto_fix.py  mypy.ini  print_bytes.py  run_ruff.py  run_ruff_to_file.py  strip_whitespace.py
reward-shaping-ppo/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
reward-shaping-ppo/analysis/: cross_analysis.py  statistics.py  tune_analysis.py
reward-shaping-ppo/callbacks/: __init__.py  logging_callback.py
reward-shaping-ppo/configs/: acrobot_dense.yaml  acrobot_identity.yaml  acrobot_pbrs.yaml  acrobot_smoke.yaml  acrobot_v1_optimized.yaml  cartpole_dense_short.yaml  cartpole_short.yaml  lunarlander_dense.yaml  lunarlander_identity.yaml  lunarlander_pbrs.yaml  lunarlander_smoke.yaml  lunarlander_v3_optimized.yaml  mountaincar_dense.yaml  mountaincar_identity.yaml  mountaincar_pbrs.yaml  mountaincar_smoke.yaml  mountaincar_v0_optimized.yaml
reward-shaping-ppo/environments/: __init__.py  wrapper.py
reward-shaping-ppo/experiments/: __init__.py  runner.py  tuning_runner.py
reward-shaping-ppo/notebooks/: .gitkeep
reward-shaping-ppo/paper_assets/: .gitkeep  comparison_table.tex  fdr_corrected_statistical_tests.json  statistical_summary.txt  statistical_tests_dense_vs_identity.json  statistical_tests_dense_vs_pbrs.json  statistical_tests_identity_vs_pbrs.json  unified_comparison_table.csv
reward-shaping-ppo/reward_functions/: __init__.py  base.py  dense.py  identity.py  pbrs.py
reward-shaping-ppo/scripts/: config_validate.py  parallel_runner.py  propagate_configs.py  sequential_runner.py
reward-shaping-ppo/tests/: __init__.py  conftest.py  (+7 more)
(+623 files in other folders)
